Updated Payment Screen

--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/ExamineItemScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/ExamineItemScreen.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype.Screens"
         mc:Ignorable="d"
-        Title="ExamineItemScreen" Height="540" Width="990" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen" BorderThickness="2,2,2,2" BorderBrush="White">
+        Title="ExamineItemScreen" Height="540" Width="990" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen" BorderThickness="0" BorderBrush="White" Background="White">
 
 
     <Grid >
@@ -17,7 +17,7 @@
             <Button x:Name="btn_close" Content="&#xE10A;"  VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Right" Width="65" Height="70" FontFamily="Segoe UI Symbol" FontSize="28" BorderBrush="{x:Null}" Background="{x:Null}" Foreground="White" Click="btn_close_Click" Margin="0"/>
         </Grid>
 
-        <Canvas Height="200" Width="200" Margin="25,130,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
+        <Canvas Height="200" Width="200" Margin="25,120,0,0" VerticalAlignment="Top" HorizontalAlignment="Left">
             <Canvas.Effect>
                 <DropShadowEffect ShadowDepth="0" BlurRadius="35" Opacity="0.25"/>
             </Canvas.Effect>
@@ -25,11 +25,11 @@
             <Label x:Name="lbl_itemPrice" Content="$0.00" HorizontalContentAlignment="Right" HorizontalAlignment="Right" VerticalAlignment="Bottom" FontFamily="Segoe UI Light" Background="#CC00BB97" Foreground="White" Width="120" FontSize="22" Canvas.Left="90" Canvas.Top="171"/>
         </Canvas>
 
-        <Label x:Name="label" Content="Description" HorizontalAlignment="Right" Margin="0,135,25,0" VerticalAlignment="Top" Width="650" FontSize="22"/>
-        <TextBlock x:Name="tb_description" Padding="6" HorizontalAlignment="Right" Height="163" Margin="0,172,25,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="650" Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus mi vel malesuada sollicitudin. Suspendisse in cursus ex. Cras placerat in diam sodales pellentesque. Nulla lacinia nunc commodo neque tristique varius. Fusce iaculis euismod mattis. In quis lacus elit. Phasellus vitae placerat mi." FontSize="22" FontFamily="Segoe UI Light"/>
+        <Label x:Name="label" Content="Description" HorizontalAlignment="Right" Margin="0,125,25,0" VerticalAlignment="Top" Width="650" FontSize="22"/>
+        <TextBlock x:Name="tb_description" Padding="6" HorizontalAlignment="Right" Height="165" Margin="0,165,25,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="650" Text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec maximus mi vel malesuada sollicitudin. Suspendisse in cursus ex. Cras placerat in diam sodales pellentesque. Nulla lacinia nunc commodo neque tristique varius. Fusce iaculis euismod mattis. In quis lacus elit. Phasellus vitae placerat mi." FontSize="22" FontFamily="Segoe UI Light"/>
 
 
-        <GridSplitter x:Name="gridSplitter" Height="2" Margin="0,339,25,0" VerticalAlignment="Top" Width="650" RenderTransformOrigin="0.5,0.5">
+        <GridSplitter x:Name="gridSplitter" Height="2" Margin="0,354,25,0" VerticalAlignment="Top" Width="650" RenderTransformOrigin="0.5,0.5">
             <GridSplitter.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
@@ -46,7 +46,7 @@
             <TextBlock x:Name="tb_numItems" TextWrapping="Wrap" Text="1" VerticalAlignment="Top" Width="40" FontSize="40" TextAlignment="Center" FontFamily="Segoe UI Light" Height="60" Margin="0,3,0,0" HorizontalAlignment="Left"/>
             <Button x:Name="btn_increase" Content="&#xE013;" Width="60"  VerticalContentAlignment="Top"  FontFamily="Segoe UI Symbol" FontSize="36" BorderBrush="{x:Null}" Background="{x:Null}" Click="btn_increase_Click" FontWeight="Bold" Foreground="#FF00BB97" HorizontalAlignment="Right" VerticalAlignment="Top" Height="60"/>
         </WrapPanel>
-        <Button x:Name="btn_addToTray" Content="Add to tray" HorizontalAlignment="Right" Margin="0,0,25,25" VerticalAlignment="Bottom" Height="52"  Width="250"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="btn_addToTray_Click" Background="#FF00BB97" Foreground="White" FontFamily="Segoe UI Light" FontSize="14" BorderBrush="{x:Null}"/>
+        <Button x:Name="btn_addToTray" Content="Add to Tray" HorizontalAlignment="Right" Margin="0,0,25,25" VerticalAlignment="Bottom" Height="52"  Width="250"  HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Click="btn_addToTray_Click" Background="#FF00BB97" Foreground="White" FontFamily="Segoe UI Light" FontSize="20" BorderBrush="{x:Null}"/>
 
 
     </Grid>
