--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/HomeScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/HomeScreen.xaml
@@ -9,7 +9,7 @@
     <Grid Background="#FF3393AB">
         <StackPanel x:Name="tabPanel" HorizontalAlignment="Left"  VerticalAlignment="Stretch" Width="150" Background="#FF122331">
             <Image x:Name="logo" Height="100" Source="/Resources/Images/logo_med.png"/>
-            <Button x:Name="btn_addTab" Height="48" Width="155" Content="New Tab +" BorderBrush="{x:Null}" Background="#FF02B694" Foreground="#FFA4DDCE" FontFamily="Segoe UI Light" FontSize="18.667" Click="btn_addTab_Click"/>
+            <Button x:Name="btn_addTab" Height="48" Width="155" Content="New Tab +" BorderBrush="{x:Null}" Background="#FF02B694" Foreground="White" FontSize="18.667" Click="btn_addTab_Click"/>
         </StackPanel>
         <Grid HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="150,0,0,0">
             <Grid.Background>
