--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/LeavingTabScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/LeavingTabScreen.xaml
@@ -5,27 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CPSC_481_Horizontal_Prototype.Screens"
         mc:Ignorable="d"
-      Title="LeavingTabWarning" Height="500" Width="750" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen" BorderThickness="2,2,2,2" BorderBrush="#FFF4F4F4">
-    <Grid Background="#FF344D61">
-        <WrapPanel Margin="10,10,0,0" Height="100" Width="278" HorizontalAlignment="Left" VerticalAlignment="Top" >
-            <Label x:Name="label" Content="&#x26A0;" HorizontalAlignment="Left" VerticalAlignment="Top" FontFamily="Segoe UI Symbol" FontSize="64" Foreground="#FFC1A10F"/>
-            <Label x:Name="lbl_warning" Content="Warning" VerticalContentAlignment="Center" FontFamily="Segoe UI Semibold" FontSize="48" Foreground="#FFC1A10F" />
+      Title="LeavingTabWarning" Height="400" Width="995" WindowStyle="None" ResizeMode="NoResize" Topmost="True" WindowStartupLocation="CenterScreen" BorderThickness="0" Background="White">
+    <Grid>
+        <WrapPanel Margin="0" Height="70"  HorizontalAlignment="Stretch" VerticalAlignment="Top" Background="#FF213F57" >
+            <Label x:Name="lbl_warning" Content="Warning" VerticalContentAlignment="Center" FontSize="34" Foreground="White" Margin="26,0,0,0" Height="70" />
         </WrapPanel>
-        <TextBlock x:Name="textBlock" FontSize="24" Margin="55,121,55,159" Foreground="White" HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Center" Height="216" FontFamily="Segoe UI Light" ><Run/><LineBreak/><Run Text="You are trying to change tabs with items in your tray. Changing tabs will clear the current tray, do you want to continue?"/></TextBlock>
-        <Button x:Name="btn_no" Content="No" Click="btn_no_Click" HorizontalAlignment="Right" VerticalAlignment="Bottom" Height="100"  Width="370" Background="#FF536472" Foreground="#FFDA1739" BorderBrush="{x:Null}" FontSize="26.667" />
-        <Button x:Name="btn_yes" Content="Yes" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="100"  Width="370" Background="#FF536472" Foreground="#FF00BB97" BorderBrush="{x:Null}" FontSize="26.667" Click="btn_yes_Click" />
-
-        <Separator HorizontalAlignment="Stretch" Height="5" Margin="0,0,0,100" VerticalAlignment="Bottom" Background="White"/>
-        <Separator HorizontalAlignment="Center" Height="1" VerticalAlignment="Bottom" Width="104" Background="White" Margin="373,0,269,-3" >
-            <Separator.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="-90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Separator.RenderTransform>
-        </Separator>
+        <Label x:Name="label" Content="&#x26A0;" HorizontalAlignment="Left" VerticalContentAlignment="Top" VerticalAlignment="Top" FontFamily="Segoe UI Symbol" FontSize="64" Foreground="#FF213F57" Margin="25,135,0,0"/>
+        <TextBlock x:Name="textBlock" FontSize="24" Margin="125,150,25,178" Foreground="#FF213F57" HorizontalAlignment="Stretch" TextWrapping="Wrap" VerticalAlignment="Center" Height="72" FontFamily="Segoe UI Light">
+            <Run Text="You are trying to change tabs with items in your tray. "  />
+            <LineBreak />
+            <Run Text="Changing tabs will clear the current tray, do you want to continue?"  />
+        </TextBlock>
+        <Button x:Name="btn_no" Content="No" Click="btn_no_Click" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="52"  Width="160"  Background="White" Foreground="#FF213F57" BorderBrush="#FF213F57" FontSize="20" Margin="210,0,0,52" BorderThickness="1"/>
+        <Button x:Name="btn_yes" Content="Yes" Click="btn_yes_Click" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="52"  Width="160" Background="#FF00BB97" Foreground="White" BorderBrush="{x:Null}" FontSize="20" Margin="25,0,0,52" BorderThickness="0"/>
 
     </Grid>
 </Window>
