--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
@@ -9,7 +9,7 @@
     <Window.Resources>
         <!-- The following code is to remove the hover effect on buttons -->
         <!-- Source: http://mark-dot-net.blogspot.ca/2007/07/creating-custom-wpf-button-template-in.html -->
-        
+
         <Style x:Key="Special_btn" TargetType="Button">
             <Setter Property="BorderThickness" Value="0" />
             <Setter Property="Margin" Value="0" />
@@ -22,7 +22,7 @@
                         <Border Name="border"
         				    Background="{TemplateBinding Background}">
                         </Border>
-                        
+
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsFocused" Value="True">
                                 <Setter Property="Background" >
@@ -112,7 +112,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-    
+
         <!--Move tray-->
         <Storyboard x:Key="sbShowTray" >
             <ThicknessAnimation Storyboard.TargetProperty="Margin" From="0,0,0,-292" To="0,0,0,108" DecelerationRatio=".9" Duration="0:0:1" />
@@ -131,15 +131,15 @@
             <DoubleAnimation Storyboard.TargetProperty="Width" From="200" To="75" DecelerationRatio=".9" Duration="0:0:1" Completed="Tab_Hidden" />
         </Storyboard>
     </Window.Resources>
-    
-<Viewbox Stretch="Fill" >
+
+    <Viewbox Stretch="Fill" >
 
         <Grid Name="grid_addTabs">
             <StackPanel x:Name="tabPanel" HorizontalAlignment="Left" VerticalAlignment="Top" Height="1080" Width="75" Background="#FF122331" ClipToBounds="False">
                 <Image x:Name="logo" Height="75" Width="75" Source="/Resources/Images/logo_sml.png"/>
                 <Button x:Name="btn_addTab" Width="75" BorderThickness="0,0,0,0"  Height="75" VerticalContentAlignment="Top" Content="+" BorderBrush="{x:Null}" Foreground="White" FontFamily="Segoe UI Semibold" FontSize="48" Click="btn_addTab_Click" Background="#FF00b694" RenderTransformOrigin="0.547,0.727"/>
             </StackPanel>
-            
+
             <!-- Exit button-->
             <Button x:Name="btn_exit" Width="55" Margin="10" Height="75" BorderThickness="0,0,0,0" BorderBrush="{x:Null}" HorizontalAlignment="Left" VerticalAlignment="Bottom" Click="btn_exit_Click" Style="{StaticResource Special_btn}">
                 <Button.Background >
@@ -188,7 +188,7 @@
                             Width="100" 
                             Height="104" 
                             Click="btn_nav_Click" 
-                            Style="{StaticResource Help_btn}">                  
+                            Style="{StaticResource Help_btn}">
                     </Button>
 
                 </WrapPanel>
@@ -222,10 +222,14 @@
 
                 <!-- Bottom Right Corner Schtuff-->
                 <Grid x:Name="grid_summary" HorizontalAlignment="Right" Height="108" VerticalAlignment="Bottom" Width="340" Background="#FFf2ab57">
-                    <Label x:Name="lbl_tabName" Content="" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" VerticalAlignment="Top" Height="54" Width="195" FontSize="21" Foreground="White" Margin="5,0,0,0"/>
-                    <Separator Width="200"  HorizontalAlignment="Left" Margin="10,0,0,0" Background="#FFECECEC"/>
-                    <Label x:Name="lbl_tabTotal" Content="Total: $0.00" HorizontalContentAlignment="Left" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="54" Width="195" FontSize="34" FontFamily="Segoe UI Light" Foreground="White" BorderThickness="0" Margin="5,0,0,0"/>
-                    <Button x:Name="btn_payNow" Content="Pay Now" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalAlignment="Stretch" Width="120"  FontSize="21" Background="#FF00B694" BorderBrush="#FFE1F7F3" Foreground="#FFE1F7F3" BorderThickness="0" Click="btn_payNow_click"/>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="42*"/>
+                        <ColumnDefinition Width="43*"/>
+                    </Grid.ColumnDefinitions>
+                    <Label x:Name="lbl_tabName" Content="" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" VerticalAlignment="Top" Height="54" Width="195" FontSize="21" Foreground="White" Margin="5,0,0,0" Grid.ColumnSpan="2"/>
+                    <Separator Width="200"  HorizontalAlignment="Left" Margin="10,0,0,0" Background="#FFECECEC" Grid.ColumnSpan="2"/>
+                    <Label x:Name="lbl_tabTotal" Content="Total: $0.00" HorizontalContentAlignment="Left" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="54" Width="195" FontSize="34" FontFamily="Segoe UI Light" Foreground="White" BorderThickness="0" Margin="5,0,0,0" Grid.ColumnSpan="2"/>
+                    <Button x:Name="btn_payNow" Content="Pay Now" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalAlignment="Stretch" Width="120"  FontSize="21" Background="#FF00B694" BorderBrush="#FFE1F7F3" Foreground="#FFE1F7F3" BorderThickness="0" Click="btn_payNow_click" Grid.Column="1"/>
                 </Grid>
 
             </Grid>
