--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Screens/MainScreen.xaml
@@ -229,7 +229,7 @@
                     <Label x:Name="lbl_tabName" Content="" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" VerticalAlignment="Top" Height="54" Width="195" FontSize="21" Foreground="White" Margin="5,0,0,0" Grid.ColumnSpan="2"/>
                     <Separator Width="200"  HorizontalAlignment="Left" Margin="10,0,0,0" Background="#FFECECEC" Grid.ColumnSpan="2"/>
                     <Label x:Name="lbl_tabTotal" Content="Total: $0.00" HorizontalContentAlignment="Left" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="54" Width="195" FontSize="34" FontFamily="Segoe UI Light" Foreground="White" BorderThickness="0" Margin="5,0,0,0" Grid.ColumnSpan="2"/>
-                    <Button x:Name="btn_payNow" Content="Pay Now" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalAlignment="Stretch" Width="120"  FontSize="21" Background="#FF00B694" BorderBrush="#FFE1F7F3" Foreground="#FFE1F7F3" BorderThickness="0" Click="btn_payNow_click" Grid.Column="1"/>
+                    <Button x:Name="btn_payNow" Content="Pay Now" HorizontalContentAlignment="Center" HorizontalAlignment="Right" VerticalAlignment="Stretch" Width="120"  FontSize="21" Background="#FF00B694" BorderBrush="#FFE1F7F3" Foreground="#FFE1F7F3" BorderThickness="0" Click="btn_payNow_click" Grid.Column="1" IsEnabled="False"/>
                 </Grid>
 
             </Grid>
