- Fixed bug where removing the only item in tray didnt disable submit order button - tried to enable page scrolling (have yet to test) - fixed the name bug where inputing only spaces would crash

--- a/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Pages/Page_Drinks.xaml
+++ b/CPSC-481-Horizontal-Prototype/CPSC-481-Horizontal-Prototype/Pages/Page_Drinks.xaml
@@ -74,7 +74,7 @@
             <Button  x:Name="btn_wine" Style="{StaticResource InformButton}" Click="navButton_Click" >Wine</Button>
         </StackPanel>
 
-        <ScrollViewer x:Name="sv_drinks" HorizontalAlignment="Stretch" Margin="0,195,0,0" VerticalAlignment="Stretch">
+        <ScrollViewer x:Name="sv_drinks" HorizontalAlignment="Stretch" Margin="0,195,0,0" VerticalAlignment="Stretch" PanningMode="VerticalOnly" ManipulationBoundaryFeedback="sv_drinks_ManipulationBoundaryFeedback">
             <StackPanel >
                 <!-- Beers -->
                 <Label x:Name="header_beer" Content="Beer" HorizontalAlignment="Left" VerticalAlignment="Top"  Foreground="#FF288DA7" FontSize="28" Margin="25,25,0,0"/>
